[package]
name = "lazytodo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.0.14", features = ["derive"] }
colored = "2.1.0"
dirs = "5.0.1"
serde = { version="1.0", features = ["derive"]}
serde_json = "1.0.108"
