[package]
name = "lazytodo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.31", features = ["serde"] }
clap = { version = "4.0.14", features = ["derive"] }
colored = "2.1.0"
dirs = "5.0.1"
itertools = "0.12.0"
prettytable-rs = "0.10.0"
serde = { version="1.0", features = ["derive"]}
serde_json = "1.0.108"
